syntax = "proto3";

service User {
    rpc CreateUser (UserRequest) returns (UserResponse) {}
    rpc QueryUser (UserRequest) returns (UserResponse) {}
}

message UserRequest {
    string name = 1;
}

message UserResponse {
    int64 id = 1;
    int64 createdAt = 2;
    int64 updatedAt = 3;
    string name = 4;
}